--- a/src/pages/_BooksPage.scss
+++ b/src/pages/_BooksPage.scss
@@ -1,4 +1,5 @@
 .books-tool-bar {
+  padding: 15px 0 25px;
   display: flex;
   align-items: baseline;
   justify-content: space-between;
